add some new todos

--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -35,6 +35,7 @@ In this work, we discuss the use of mobile phone records --also known as Call De
 
 This work will be structured as follows: for the reminaing of this chapter we will give some key aspects of Chagas disease in Argentina and Mexico and introduce shortly the subfield of \textit{Machine Learning}. Chapter 2 will introduce the data used for this problem and show how we constructed national disease risk maps. Chapter 3 will talk about Machine Learning theory, describing methods and algorithms which will be applied to this problem. Chapter 4 will show the results of the models introduced in the chapter before and outline the consequences of this to our problem. Chapter 5 is the final conclusion of this work.
 
+\todo{add more references to what is out of scope in this work}
 
 \section{Brief overview of machine learning}
 
@@ -57,6 +58,8 @@ For more than 50 years, vector control campaigns have been underway in Argentina
 The ecoregion's low socio-demographic conditions further support the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
 % The ecoregion as of today is hyperendemic for the disease.
 This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:machineLearning} and \cref{cha:descr-risk}.
+
+\todo{add more references to examples of CDRs & chagas or other diseases}
 
 \begin{figure}[h!]
 \centering
