--- a/preamble.tex
+++ b/preamble.tex
@@ -287,7 +287,7 @@ pdfkeywords={machine learning}
 \crefname{exercise}{Exercise}{Exercises}
 \crefname{enumerate}{Enumeration}{Enumerations}
 \crefname{stepsi}{Step}{Steps}
-\crefname{problem}{Problem}{Problem}
+\crefname{problem}{Problem}{Problems}
 
 \crefname{equation}{}{}
 \crefformat{equation}{#2(#1)#3}
