--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -221,18 +221,23 @@ EPE = \Expect_X\left[ \sum_{k=1}^{K} L( Y_K , \hat{f}(X) ) P(Y_k|X) \right] =
 
 Given that we can have a high or low variance and bias, there are only four possible performances of any model. Our objective will then be to work out the data and the model to reach a state of low bias and variance. Different states of bias and variance require strategies to make a better model.
 
-For example, a very common scenario is having a model that has a high overall variance and low bias. \textcite{dworkFeldman-adaptiveDataAnalysis2015} defines that a learner overfits a training set $\mathcal{T}$ if it fits parameter $\hat{\theta}$ while there $\exists \theta^*$ and $\epsilon > 0 $ such that
+For example, a very common scenario is having a model that has a high overall variance and low bias.
+It is said in theliterature that when this situation is combined with a model which gives a good performance on the $mathrm{T}$ whilst having a poor performance on $mathrm{Ts}$, then the model \textit{overfits} the data. This can happen for various reasons and is mostly related to overly-complex models or having insufficient data to train, which leads to model well trained only for $mathrm{T}$.
 
-\begin{equation}
-Error_{train}(\hat{\theta}) < Error_{train}(\theta^*) \ and \ Error(\theta^*) + \epsilon < Error(\hat{\theta})
-%\sum_{i=0}^{\infty} a_i x^i
-\end{equation}\label{eq:overfitting}
+Overfit models will fail to generalize on new data since the variance structure of the training set is such that the number of training samples is not enough to lower the overall variance of this model.
+
+ % The result of this setting will be a learnier that works very accurately on the train set only and with poor overall performance on new samples.
+
 
 %% EZECORRECTION: citar la definicion de overfitting.  Pero entonces todos los modelos estan overfiteados? (tomar la union de train y test?)
 %% nota, se hace dificil encontrar una definicion formal online.
+%% charles y alejo quedaron en dejarlo sin definicion, sino como ejemplos.
 
-This means that the variance structure of the training set is such that the number of training samples is not enough to lower the overall variance of this model. The result of this setting will be a learnier that works very accurately on the train set only and with poor overall performance on new samples.
-
+% This scenario is commonly known as ov \textcite{dworkFeldman-adaptiveDataAnalysis2015} defines that a learner overfits a training set $\mathcal{T}$ if it fits parameter $\hat{\theta}$ while there $\exists \theta^*$ and $\epsilon > 0 $ such that
+% \begin{equation}
+% Error_{train}(\hat{\theta}) < Error_{train}(\theta^*) \ and \ Error(\theta^*) + \epsilon < Error(\hat{\theta})
+% %\sum_{i=0}^{\infty} a_i x^i
+% \end{equation}\label{eq:overfitting}
 
 %A trivial algorithm that would
 %An opposite scenario scenario occurs when
