--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -59,7 +59,7 @@ The ecoregion's low socio-demographic conditions further support the parasite's 
 % The ecoregion as of today is hyperendemic for the disease.
 This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:machineLearning} and \cref{cha:descr-risk}.
 
-\todo{add more references to examples of CDRs & chagas or other diseases}
+\todo{add more references to examples of CDRs and chagas or other diseases}
 
 \begin{figure}[h!]
 \centering
