rename some loss to scoring functions

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -47,7 +47,7 @@ In practice, the model will stem into different algorithms where each variant wi
 
 Finally, the output class for a given sample will be given by taking the class $k'$ which maximizes the probability $P(C_k' \mid x)$.
 
-\section{Classifier: Decision Trees}
+\section{Classifier: Decision Trees}\label{section:decision_trees}
 
 %view of this supervised learner used in regression and classification problems.
 
